# super-adventure

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  run.py
algorithms/prefix-sum/: README.md  subarray_with_0_sum.py
algorithms/two-pointer/: closet_pair.py
datastructures/: dynamic_array.py  stack.py
design-pattern/factory/: index.ts  notification.ts
leetcode/strivers_sde_sheet/: set_matrix_zero.py
leetcode/strivers_sde_sheet/arrays/: is_array_sorted.py  largest_element_in_array.py  pascals_triangle.py  set_matrix_zero.py  triangukar_sum.py
prefix-sum/: equilibirum_index.py
standards/dependency-injection/: after_decoupling.py  with_di.py
standards/dependency_injection/: main.py
standards/dependency_injection/single_application/: __main__.py  containers.py  services.py
testcases/: basic.py
utils/: __init__.py  iter_and_gen.py  profiling.py
