[tool.poetry]
name = "super-adventure"
version = "0.1.0"
description = ""
authors = ["Bhargav Dadi <22073810+bhargavjagan@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "super_adventure"}]

[tool.poetry.dependencies]
python = "^3.10"
dependency-injector = "^4.41.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
